--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -18,7 +18,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["node"]
+    "types": ["node"],
+
+    "esModuleInterop": true
   },
   "include": ["src"]
 }
