--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "typescript": "^5.6.3"
@@ -26,6 +27,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
+    "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.7.6",
     "@types/pg": "^8.11.10",
