--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "serve": "node dist/index.js"
+    "serve": "node dist/index.js",
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "serve": "node dist/index.js"
